# cli_security_assessment

./: README.md  cli_security_evaluator.py  package-lock.json
python3-clisec/: package-lock.json  pyproject.toml
