[tool.poetry]
name = "python3-clisec"
version = "0.1.0"
description = ""
authors = ["SecureLayer <117689930+SecureLayer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
